// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSemantic Rendering renders with Danger severity 1`] = `
<View
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
    ]
  }
>
  <View
    accessibilityLabel="Danger Button"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#3c4d9d0f",
          "borderRadius": 12,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "minWidth": 80,
          "opacity": 1,
          "overflow": "hidden",
          "paddingLeft": 16,
          "paddingRight": 16,
          "width": "auto",
        },
        [
          {
            "backgroundColor": "#ca35421a",
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="spinner-container"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
            },
            undefined,
          ]
        }
        testID="spinner"
      >
        <View
          style={
            [
              {
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              },
            ]
          }
          testID="spinner-animated-view"
        >
          <SvgMock
            fill="currentColor"
            name="Loading"
            style={
              [
                {
                  "color": "#ca3542",
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ]
            }
            testID="spinner-icon"
          />
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "columnGap": 8,
          "flexDirection": "row",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="content-container"
    >
      <Text
        accessibilityRole="text"
        style={
          [
            {
              "color": "#ca3542",
              "flexGrow": 0,
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "fontWeight": 400,
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Danger Button
      </Text>
    </View>
  </View>
</View>
`;

exports[`ButtonSemantic Rendering renders with Success severity 1`] = `
<View
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
    ]
  }
>
  <View
    accessibilityLabel="Success Button"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#3c4d9d0f",
          "borderRadius": 12,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "minWidth": 80,
          "opacity": 1,
          "overflow": "hidden",
          "paddingLeft": 16,
          "paddingRight": 16,
          "width": "auto",
        },
        [
          {
            "backgroundColor": "#457a391a",
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="spinner-container"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
            },
            undefined,
          ]
        }
        testID="spinner"
      >
        <View
          style={
            [
              {
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              },
            ]
          }
          testID="spinner-animated-view"
        >
          <SvgMock
            fill="currentColor"
            name="Loading"
            style={
              [
                {
                  "color": "#457a39",
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ]
            }
            testID="spinner-icon"
          />
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "columnGap": 8,
          "flexDirection": "row",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="content-container"
    >
      <Text
        accessibilityRole="text"
        style={
          [
            {
              "color": "#457a39",
              "flexGrow": 0,
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "fontWeight": 400,
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Success Button
      </Text>
    </View>
  </View>
</View>
`;
